--- a/sass/3-layouts/_process.scss
+++ b/sass/3-layouts/_process.scss
@@ -31,7 +31,7 @@
                 transform: scale(1.3);
             }
             .jump{
-                animation: jump .6s infinite;
+                animation: jump .5s infinite;
 
                 @keyframes jump {
                     0%{
@@ -64,7 +64,8 @@
             background-color: $color-primary;
             color: #F6F6F6;
             border-radius:50%;
-            animation: jump cubic-bezier(0.075, 0.82, 0.165, 1) .4s ;
+    
+            
         }
         i {
             color: #7E7E7E;
